posts: cleanup categories

--- a/src/_posts/2020-03-30-examples2.md
+++ b/src/_posts/2020-03-30-examples2.md
@@ -2,8 +2,7 @@
 title: Example
 subtitle: Polar grid
 date: 2020-03-28T09:00:00+00:00
-categories:
-  - Examples
+category: Examples
 ---
 
 Today, I just want to highlight one new example in the wiki showing a **polar grid**:
