--- a/src/_posts/2020-04-02-examples3.md
+++ b/src/_posts/2020-04-02-examples3.md
@@ -2,8 +2,7 @@
 title: Examples
 subtitle:  Fullscreen mode, n-th roots
 date: 2020-04-02T09:00:00+00:00
-categories:
-  - Examples
+category: Examples
 ---
 
 Today we have to new examples:
