--- a/src/_posts/2021-01-12-webinar-3.md
+++ b/src/_posts/2021-01-12-webinar-3.md
@@ -2,8 +2,9 @@
 title: Webinar - advanced JSXGraph programming
 subtitle: Online course
 date: 2021-01-13T09:00:00+00:00
-categories:
-  - Workshops
+category: Announcement
+tags:
+  - Workshop
 ---
 
 Dear friends of JSXGraph,
