--- a/src/_posts/2013-05-06-0-97-on-cdnjs.md
+++ b/src/_posts/2013-05-06-0-97-on-cdnjs.md
@@ -5,8 +5,9 @@ date: 2013-05-06T07:35:38+00:00
 author: michael
 guid: http://jsxgraph.uni-bayreuth.de/wp/?p=836
 permalink: /2013/05/06/0-97-on-cdnjs/
-categories:
-  - Uncategorized
+category: Announcement
+tags:
+  - CDN
 ---
 JSXGraph 0.97 is now available on [CDNJS](http://cdnjs.com/ "CDNJS"). The url is
 
