--- a/src/_posts/2017-01-17-https.md
+++ b/src/_posts/2017-01-17-https.md
@@ -1,8 +1,8 @@
 ---
 title: https enabled
-subtitle: Major new release
 date: 2016-07-05T11:15:08+00:00
-categories:
+category: News
+tags:
   - Webserver
 ---
 Good news: The JSXgraph site `jsxgraph.uni-bayreuth.de` now be accessed with https. Thanks to letsencrypt.org
