--- a/src/_posts/2020-03-28-examples1.md
+++ b/src/_posts/2020-03-28-examples1.md
@@ -2,8 +2,7 @@
 title: Examples
 subtitle: Intersection of curves, polygons, and circles
 date: 2020-03-28T09:00:00+00:00
-categories:
-  - Examples
+category: Examples
 ---
 
 In the [JSXGraph wiki](https://jsxgraph.org/wiki) there are now several examples for intersection of curves, polygons, and circles. The clipping algorithm is an implementation of the *Greiner-Hormann algorithm*. Please, report failures.
