--- a/src/_posts/2020-12-13-webinar-2.md
+++ b/src/_posts/2020-12-13-webinar-2.md
@@ -2,8 +2,9 @@
 title: Webinar - advanced JSXGraph programming
 subtitle: Online course
 date: 2020-12-13T09:00:00+00:00
-categories:
-  - Workshops
+category: Announcement
+tags:
+  - Workshop
 ---
 
 Dear friends of JSXGraph,
