--- a/src/_posts/2021-06-01-webinar-7.md
+++ b/src/_posts/2021-06-01-webinar-7.md
@@ -2,8 +2,9 @@
 title: Webinar - advanced JSXGraph programming
 subtitle: Online course
 date: 2021-06-01T06:00:00+00:00
-categories:
-  - Workshops
+category: Announcement
+tags:
+  - Workshop
 ---
 
 Dear friends of JSXGraph,
