--- a/src/_posts/2024-12-12-24hours2025.md
+++ b/src/_posts/2024-12-12-24hours2025.md
@@ -1,8 +1,9 @@
 ---
 title: Announcement - 24hours2025
 subtitle: Live meeting
-categories:
-  - Workshops
+category: Announcement
+tags:
+  - Workshop
 ---
 
 Dear friends of JSXGraph,
