posts: fix authors

--- a/src/_posts/releases/2015-01-15-release-of-0-99-3.md
+++ b/src/_posts/releases/2015-01-15-release-of-0-99-3.md
@@ -2,7 +2,7 @@
 id: 875
 title: Release of 0.99.3
 date: 2015-01-15T14:50:08+00:00
-author: alfred
+author: Alfred Wassermann
 guid: http://jsxgraph.uni-bayreuth.de/wp/?p=875
 permalink: /2015/01/15/release-of-0-99-3/
 ---
