adapt post tags

--- a/src/_posts/2024-12-12-24hours2025.md
+++ b/src/_posts/2024-12-12-24hours2025.md
@@ -1,6 +1,7 @@
 ---
 title: Announcement - 24hours2025
 subtitle: Live meeting
+author: Carsten Miller, Alfred Wassermann
 category: Announcement
 tags:
   - Workshop
