relBase, file names

--- a/src/error/403.md
+++ b/src/error/403.md
@@ -13,4 +13,4 @@ sitemap:
 
 Forbidden. You don't have permission to access this resource directly.
 
-Please go back to [sketchometry.org](/).
+Please go back to [jsxgraph.org]({{ relBase }}/).
