--- a/src/error/404.md
+++ b/src/error/404.md
@@ -13,4 +13,4 @@ sitemap:
 
 The page you were looking for does not exist. Sorry about that.
 
-Please go back to [{{ site.data.const.url.web }}](/).
+Please go back to [{{ site.data.const.url.web }}]({{ relBase }}/).
