--- a/src/_posts/2011-09-17-v0.92-available-on-cdn.md
+++ b/src/_posts/2011-09-17-v0.92-available-on-cdn.md
@@ -3,8 +3,7 @@ id: 686
 title: v 0.92 available on CDN
 date: 2011-09-17T14:32:45+00:00
 author: Alfred Wassermann
-guid: http://jsxgraph.uni-bayreuth.de/wp/?p=686
-permalink: /2011/09/17/v-0-92-available-on-cdn/
+category: News
 ---
 Version 0.92 has been landed on the CDN. The link is
 
