blogposts: rename `Announcement` to `Event`

--- a/src/_posts/2020-11-09-webinar-1.md
+++ b/src/_posts/2020-11-09-webinar-1.md
@@ -2,7 +2,7 @@
 title: Webinar - advanced JSXGraph programming
 subtitle: Online course
 author: Alfred Wassermann
-category: Announcement
+category: Event
 tags:
   - Workshop
 ---
