--- a/src/_posts/2024-12-12-24hours2025.md
+++ b/src/_posts/2024-12-12-24hours2025.md
@@ -2,7 +2,7 @@
 title: Announcement - 24hours2025
 subtitle: Live meeting
 author: Carsten Miller, Alfred Wassermann
-category: Announcement
+category: Event
 tags:
   - Workshop
 ---
