--- a/src/_posts/2020-12-13-webinar-2.md
+++ b/src/_posts/2020-12-13-webinar-2.md
@@ -2,7 +2,7 @@
 title: Webinar - advanced JSXGraph programming
 subtitle: Online course
 author: Alfred Wassermann
-category: Announcement
+category: Event
 tags:
   - Workshop
 ---
