--- a/src/_posts/2021-01-20-webinar-4.md
+++ b/src/_posts/2021-01-20-webinar-4.md
@@ -2,7 +2,7 @@
 title: Webinar - advanced JSXGraph programming
 subtitle: Online course
 author: Alfred Wassermann
-category: Announcement
+category: Event
 tags:
   - Workshop
 ---
