blogposts: rename `News` to `General`

--- a/src/_posts/2011-09-17-v0.92-available-on-cdn.md
+++ b/src/_posts/2011-09-17-v0.92-available-on-cdn.md
@@ -2,7 +2,7 @@
 id: 686
 title: v 0.92 available on CDN
 author: Alfred Wassermann
-category: News
+category: General
 ---
 Version 0.92 has been landed on the CDN. The link is
 
