--- a/src/_posts/2020-03-30-examples2.md
+++ b/src/_posts/2020-03-30-examples2.md
@@ -1,7 +1,7 @@
 ---
 title: Example
 subtitle: Polar grid
-category: Examples
+category: Example
 ---
 
 Today, I just want to highlight one new example in the wiki showing a **polar grid**:
