--- a/src/_posts/2020-04-02-examples3.md
+++ b/src/_posts/2020-04-02-examples3.md
@@ -1,7 +1,7 @@
 ---
 title: Examples
 subtitle:  Fullscreen mode, n-th roots
-category: Examples
+category: Example
 ---
 
 Today we have to new examples:
