--- a/src/_posts/2020-04-15-examples4.md
+++ b/src/_posts/2020-04-15-examples4.md
@@ -1,7 +1,7 @@
 ---
 title: Example
 subtitle: Efficient scatter plots
-category: Examples
+category: Example
 ---
 
 Today, I want to show you a neat trick to create *scatter plots* with a large number of points. Of course, it is possible to use JSXGraph *points*, 
